<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/four_dp_dim">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.android.popularmovies.ReviewsActivity"
        tools:showIn="@layout/activity_reviews">


        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height_dp_dim"
            android:layout_marginStart="@dimen/height_dp_dim"
            android:text="@string/vote_average_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height_dp_dim"
            android:layout_marginStart="@dimen/height_dp_dim"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:tint="@color/colorAccent"
            app:layout_constraintLeft_toRightOf="@+id/tv_vote_average"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/start2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:tint="@color/colorAccent"
            app:layout_constraintLeft_toRightOf="@+id/start1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/start3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:tint="@color/colorAccent"
            app:layout_constraintLeft_toRightOf="@+id/start2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/start4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:tint="@color/colorAccent"
            app:layout_constraintLeft_toRightOf="@+id/start3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <ImageView
            android:id="@+id/start5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:tint="@color/colorAccent"
            app:layout_constraintLeft_toRightOf="@+id/start4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_rate_black_18dp" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp_dim"
            android:layout_marginStart="@dimen/ten_dp_dim"
            android:text="@string/tv_year_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_vote_average"
            app:layout_constraintLeft_toRightOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/start1" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/zero_dp_dim"
            android:layout_height="@dimen/one_dp_dim"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <TextView
            android:id="@+id/tv_reviews_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp_dim"
            android:layout_marginStart="@dimen/ten_dp_dim"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:text="@string/reviews_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="@dimen/zero_dp_dim"
            android:id="@+id/rv_reviews"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp_dim"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_lbl">


        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
</layout>

