<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.popularmovies.DetailsActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="32dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/back_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster"
                    app:layout_collapseMode="pin" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_container"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/four_dp_dim"
                app:cardCornerRadius="@dimen/four_dp_dim"
                app:cardElevation="@dimen/four_dp_dim">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <include
                            android:id="@+id/desc_div"
                            layout="@layout/description_div"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toTopOf="@+id/circle_items"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginBottom="10dp"/>


                        <include
                            android:id="@+id/circle_items"
                            layout="@layout/circle_states_items"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/desc_div"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                        <View
                            android:id="@+id/divider1"
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/dotted"
                            android:layerType="software"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/circle_items" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_genre"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/height_dp_dim"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider1"
                            tools:listitem="@layout/genre_item" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="@dimen/ten_dp_dim"
                            android:background="@drawable/dotted"
                            android:layerType="software"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rv_genre" />

                        <TextView
                            android:id="@+id/tv_smal_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/lorem_ipsum_desc"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider2" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/reviewBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/white"
                            android:fontFamily="monospace"
                            android:text="@string/reviews_str"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_smal_description" />


                        <TextView
                            android:id="@+id/trailers_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/sixten_dp_dim"
                            android:text="@string/trailers_str"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/reviewBtn" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_trailers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/height_dp_dim"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trailers_lbl"
                            tools:listitem="@layout/trailer_item" />
                    </android.support.constraint.ConstraintLayout>

                </ScrollView>

            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixten_dp_dim"
            android:onClick="rateMovie"
            app:layout_anchor="@id/detail_container"
            app:layout_anchorGravity="top|end"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

    </android.support.design.widget.CoordinatorLayout>
</layout>

